cmake_minimum_required(VERSION 2.8)
#cmake_policy(SET CMP0014 OLD) # do not warn about empty directories

project(ROOT C CXX)

# cotire
# set (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
# include(cotire)

UNSET(BUILD_FRAMEWORKS CACHE)
UNSET(BUILD_DEMOS CACHE)
UNSET(BUILD_TESTS CACHE)

OPTION(BUILD_FRAMEWORKS "Enable this to build *all* frameworks" ON)
OPTION(BUILD_DEMOS      "Enable this to build *all* demos"      ON)
OPTION(BUILD_TESTS      "Enable this to build *all* tests"      OFF)



if(MSVC)
    add_definitions(/EHsc)
    add_definitions(/D_CRT_SECURE_NO_WARNINGS)
    add_definitions(/wd4244) # dear MSVC, im fully aware and confident about my type conversions. stop hammering me. kthx :s

    if (CMAKE_BUILD_TYPE MATCHES "[Dd][Ee][Bb][Uu][Gg]")
        add_definitions("/DDEBUG /Zi /Oy-")
    else()
        add_definitions("/DNDEBUG /D_NDEBUG /Zi /Oy- /Ox")
    endif()
endif(MSVC)

## include <moon9/*>
include_directories("src")

if (CMAKE_BUILD_TYPE MATCHES "[Dd][Ee][Bb][Uu][Gg]")
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug-lib)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug-lib)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug-bin)
    if(BUILD_FRAMEWORKS)
    ##  add_subdirectory("src/moon9/hub"        ./debug-trash/hub)
        add_subdirectory("src/moon9/debug"      ./debug-trash/debug)
        add_subdirectory("src/moon9/hid"        ./debug-trash/hid)
        add_subdirectory("src/moon9/io"         ./debug-trash/io)
        add_subdirectory("src/moon9/math"       ./debug-trash/math)
        add_subdirectory("src/moon9/memtracer"  ./debug-trash/memtracer)
        add_subdirectory("src/moon9/os"         ./debug-trash/os)
        add_subdirectory("src/moon9/play"       ./debug-trash/play)
        add_subdirectory("src/moon9/render"     ./debug-trash/render)
        add_subdirectory("src/moon9/spatial"    ./debug-trash/spatial)
        add_subdirectory("src/moon9/string"     ./debug-trash/string)
        add_subdirectory("src/moon9/test"       ./debug-trash/test)
        add_subdirectory("src/moon9/time"       ./debug-trash/time)
    endif()
else()
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release-lib)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release-lib)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/release-bin)
    if(BUILD_FRAMEWORKS)
    ##  add_subdirectory("src/moon9/hub"        ./release-trash/hub)
        add_subdirectory("src/moon9/debug"      ./release-trash/debug)
        add_subdirectory("src/moon9/hid"        ./release-trash/hid)
        add_subdirectory("src/moon9/io"         ./release-trash/io)
        add_subdirectory("src/moon9/math"       ./release-trash/math)
        add_subdirectory("src/moon9/memtracer"  ./release-trash/memtracer)
        add_subdirectory("src/moon9/os"         ./release-trash/os)
        add_subdirectory("src/moon9/play"       ./release-trash/play)
        add_subdirectory("src/moon9/render"     ./release-trash/render)
        add_subdirectory("src/moon9/spatial"    ./release-trash/spatial)
        add_subdirectory("src/moon9/string"     ./release-trash/string)
        add_subdirectory("src/moon9/test"       ./release-trash/test)
        add_subdirectory("src/moon9/time"       ./release-trash/time)
    endif()
endif()

if(BUILD_TESTS)
    include_directories("deps/play/msgpack/src")
    file(GLOB msgpack-static "deps/play/msgpack/src/*.cpp")
    file(GLOB_RECURSE ALL_TESTS "src/moon9/*.test.cpp")
    add_executable(ALL.TESTS "src/moon9/test/test.cpp" ${msgpack-static} ${ALL_TESTS})
endif()
