cmake_minimum_required(VERSION 2.8)
project(MOON9_IO C CXX)

if(MSVC)
  add_definitions(/EHsc)
  add_definitions(/D_CRT_SECURE_NO_WARNINGS)
  add_definitions(/wd4244) # dear MSVC, im fully aware and confident about my type conversions. stop hammering me. kthx :s
endif(MSVC)

include_directories("../../../deps/io")
include_directories("../../../deps/io/enet/include")

file(GLOB LZ4_SRCS "../../../deps/io/lz4/lz4.c" "../../../deps/io/lz4/lz4hc.c")
add_library(lz4-static STATIC ${LZ4_SRCS})

file(GLOB PUGIXML_SRCS "../../../deps/io/pugixml/pugixml.cpp")
add_library(pugixml-static STATIC ${PUGIXML_SRCS})

file(GLOB MINIZ_SRCS "../../../deps/io/miniz/miniz.c")
add_library(miniz-static STATIC ${MINIZ_SRCS})

file(GLOB ENET_SRCS "../../../deps/io/enet/*.c")
add_library(enet-static STATIC ${ENET_SRCS})

file(GLOB MOON9_IO_SRCS *.cpp *.hpp *.inl)
file(GLOB MOON9_IO_SAMPLES *.sample.cpp)
file(GLOB MOON9_IO_TESTS *.test.cpp)
list(REMOVE_ITEM MOON9_IO_SRCS "" ${MOON9_IO_SAMPLES} ${MOON9_IO_TESTS})
## list(APPEND MOON9_IO_SRCS platform/w32/others.cpp)
add_library(moon9-io-static STATIC ${MOON9_IO_SRCS})

add_executable(compress.sample                   compress/compress.sample.cpp)
add_executable(file.sample                       file/file.sample.cpp)
add_executable(files.sample                      file/files.sample.cpp)
add_executable(ioformat.sample                   file/format/format.sample.cpp)
add_executable(iostring.sample                   file/string/string.sample.cpp)
add_executable(http.sample                       http/http.sample.cpp)
add_executable(netstring.sample                  netstring/netstring.sample.cpp)
add_executable(pack.sample                       pack.sample.cpp)
add_executable(pak.sample                        pak/pak.sample.cpp)
add_executable(stream.first.sample               stream/stream.first.sample.cpp)
add_executable(stream.second.sample              stream/stream.second.sample.cpp)
add_executable(tcp.client.sample                 tcp/tcp.client.sample.cpp)
add_executable(tcp.server.sample                 tcp/tcp.server.sample.cpp)
add_executable(udp.client.sample                 udp/udp.client.sample.cpp)
add_executable(udp.server.sample                 udp/udp.server.sample.cpp)
add_executable(xml.sample                        xml.sample.cpp)

target_link_libraries(compress.sample            moon9-io-static lz4-static)
target_link_libraries(file.sample                moon9-io-static)
target_link_libraries(files.sample               moon9-io-static)
target_link_libraries(ioformat.sample            moon9-io-static)
target_link_libraries(iostring.sample            moon9-io-static)
target_link_libraries(http.sample                moon9-io-static)
target_link_libraries(netstring.sample           moon9-io-static)
target_link_libraries(pack.sample                moon9-io-static lz4-static pugixml-static miniz-static)
target_link_libraries(pak.sample                 moon9-io-static miniz-static)
target_link_libraries(stream.first.sample        moon9-io-static)
target_link_libraries(stream.second.sample       moon9-io-static)
target_link_libraries(tcp.client.sample          moon9-io-static)
target_link_libraries(tcp.server.sample          moon9-io-static)
target_link_libraries(udp.client.sample          moon9-io-static enet-static)
target_link_libraries(udp.server.sample          moon9-io-static enet-static)
target_link_libraries(xml.sample                 moon9-io-static pugixml-static)

