cmake_minimum_required(VERSION 2.8)
project(MOON9_OS C CXX)

if(MSVC)
  add_definitions(/EHsc)
  add_definitions(/D_CRT_SECURE_NO_WARNINGS)
  add_definitions(/wd4244) # dear MSVC, im fully aware and confident about my type conversions. stop hammering me. kthx :s
endif(MSVC)

file(GLOB MOON9_OS_SRCS *.cpp *.hpp)
file(GLOB MOON9_OS_SAMPLES *.sample.cpp)
file(GLOB MOON9_OS_TESTS *.test.cpp)
list(REMOVE_ITEM MOON9_OS_SRCS "" ${MOON9_OS_SAMPLES} ${MOON9_OS_TESTS})
## list(APPEND MOON9_OS_SRCS platform/w32/others.cpp)
add_library(moon9-os-static STATIC ${MOON9_OS_SRCS})

add_executable(alert.sample.cpp                 alert/alert.sample.cpp)
add_executable(app.sample.cpp                   app/app.sample.cpp)
add_executable(browse.sample.cpp                browse/browse.sample.cpp)
add_executable(clipboard.sample.cpp             clipboard/clipboard.sample.cpp)
add_executable(confirm.sample.cpp               confirm/confirm.sample.cpp)
add_executable(dialog.sample.cpp                dialog/dialog.sample.cpp)
add_executable(endian.sample.cpp                endian/endian.sample.cpp)
add_executable(environment.sample.cpp           environment/environment.sample.cpp)
add_executable(error.sample.cpp                 error/error.sample.cpp)
add_executable(prompt.sample.cpp                prompt/prompt.sample.cpp)

target_link_libraries(alert.sample.cpp          moon9-os-static)
target_link_libraries(app.sample.cpp            moon9-os-static)
target_link_libraries(browse.sample.cpp         moon9-os-static)
target_link_libraries(clipboard.sample.cpp      moon9-os-static)
target_link_libraries(confirm.sample.cpp        moon9-os-static)
target_link_libraries(dialog.sample.cpp         moon9-os-static)
target_link_libraries(endian.sample.cpp         moon9-os-static)
target_link_libraries(environment.sample.cpp    moon9-os-static)
target_link_libraries(error.sample.cpp          moon9-os-static)
target_link_libraries(prompt.sample.cpp         moon9-os-static)
