cmake_minimum_required(VERSION 2.8)
project(MOON9_OS C CXX)

if(MSVC)
  add_definitions(/EHsc)
  add_definitions(/D_CRT_SECURE_NO_WARNINGS)
  add_definitions(/wd4244) # dear MSVC, im fully aware and confident about my type conversions. stop hammering me. kthx :s
endif(MSVC)

file(GLOB MOON9_OS_SRCS *.cpp *.hpp)
file(GLOB MOON9_OS_SAMPLES *.sample.cpp)
file(GLOB MOON9_OS_TESTS *.test.cpp)
list(REMOVE_ITEM MOON9_OS_SRCS "" ${MOON9_OS_SAMPLES} ${MOON9_OS_TESTS})
## list(APPEND MOON9_OS_SRCS platform/w32/others.cpp)
add_library(moon9-os-static STATIC ${MOON9_OS_SRCS})

add_executable(alert.sample                     alert/alert.sample.cpp)
add_executable(app.sample                       app/app.sample.cpp)
add_executable(browse.sample                    browse/browse.sample.cpp)
add_executable(clipboard.sample                 clipboard/clipboard.sample.cpp)
add_executable(confirm.sample                   confirm/confirm.sample.cpp)
add_executable(dialog.sample                    dialog/dialog.sample.cpp)
add_executable(endian.sample                    endian/endian.sample.cpp)
add_executable(environment.sample               environment/environment.sample.cpp)
add_executable(error.sample                     error/error.sample.cpp)
add_executable(prompt.sample                    prompt/prompt.sample.cpp)

target_link_libraries(alert.sample              moon9-os-static)
target_link_libraries(app.sample                moon9-os-static)
target_link_libraries(browse.sample             moon9-os-static)
target_link_libraries(clipboard.sample          moon9-os-static)
target_link_libraries(confirm.sample            moon9-os-static)
target_link_libraries(dialog.sample             moon9-os-static)
target_link_libraries(endian.sample             moon9-os-static)
target_link_libraries(environment.sample        moon9-os-static)
target_link_libraries(error.sample              moon9-os-static)
target_link_libraries(prompt.sample             moon9-os-static)
